Fix readthedocs environment settings

--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,4 +1,6 @@
 name: wxprofilers-docs
+channels:
+  - conda-forge
 dependencies:
   - gfortran_linux-64
   - cython
@@ -6,5 +8,7 @@ dependencies:
   - numpy
   - pandas
   - scipy
+  - sphinxcontrib-apidoc
+  - sphinxcontrib-bibtex
   - statsmodels
   - xarray
